--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,44 @@
   text-align: center;
 }
 
+.container{
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  margin-top: -60px;
+  margin-left: -50px;
+  text-align: center;
+  font-size: 20px;
+  height: 600px;
+  width: 800px;
+  background-color: green;
+}
+
+.member1{
+  position: absolute;
+  top: 20%;
+  left: 22%;
+  margin-top: -60px;
+  margin-left: -50px;
+  text-align: center;
+  font-size: 20px;
+  height: 500px;
+  width: 320px;
+  background-color: rgb(34, 180, 248);
+}
+.member2{
+  position: absolute;
+  top: 20%;
+  left: 55%;
+  margin-top: -60px;
+  margin-left: -50px;
+  text-align: center;
+  font-size: 20px;
+  height: 500px;
+  width: 320px;
+  background-color: rgb(34, 180, 248);
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
